--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -41,3 +41,11 @@ body {
   padding: 20px;
   margin: 10px;
 }
+.blockead{
+  width: 200px;
+  height: 200px;
+  border: 10px solid rgb(192, 23, 31);
+  border-radius: 15px;
+  padding: 20px;
+  margin: 10px;
+}
